--- a/css/style.css
+++ b/css/style.css
@@ -15,11 +15,14 @@ main{
     grid-template-columns: auto auto;
     grid-template-rows: auto auto;
     /* background: yellow; */
-    margin-top: 10%;
+    margin-top: 5%;
     padding: 5%;
 }
+.image__info img{
+    width: 160px;
+}
 .info__Crews article:nth-child(4n-1){
-    background: green;
+    /* background: green; */
     grid-column: 1 / span 2; 
     display: flex;
     justify-content: center;
@@ -30,6 +33,7 @@ main{
 }
 .container__info{
     display: flex;
+    color: var(--color-3);
     /* background: red; */
 }
 footer{
