--- a/css/styleCREW.css
+++ b/css/styleCREW.css
@@ -5,7 +5,6 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 100vh;
 }
 main{
 
@@ -15,16 +14,14 @@ main{
     grid-template-columns: auto auto;
     grid-template-rows: auto auto;
     /* background: yellow; */
-    margin-top: 5%;
-}
-.image__info img{
-    width: 160px;
+    margin-top: 5vw;
 }
 .allinfo__content article:nth-child(4n-1){
     /* background: green; */
     grid-column: 1 / span 2; 
     display: flex;
     justify-content: center;
+    margin-top: 4vw;
 }
 .info__member{
     display: flex;
@@ -35,33 +32,49 @@ main{
     color: var(--color-3);
     /* background: red; */
 }
+.content__info{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1.3vw;
+    margin-right: 4vw;
+    
+}
+.image__info img{
+    width: 12vw;
+    box-shadow: 0px 0px 30px rgb(255, 255, 255);
+}
 footer{
     background: var(--color-2);
-    clip-path: polygon(10% 25%, 90% 25%, 100% 100%, 0% 100%);
-    padding-left: 7%;
-    padding-top: 3%;
-    width: 60%;
+    clip-path: polygon(10% 60%, 90% 60%, 100% 100%, 0% 100%);
+    padding-left: 7vw;
+    padding-top: 3vw;
+    width: 60vw;
     align-self: center;
+    /* background: red; */
 }
 .footer__menu {
     display: flex;
-    width: 87%;
+    width: 53vw;
+    height: 10vw;
     /* background: yellow; */
+    align-items: end;
 }
 .article__crew, .article__launches{
     display: flex;
     flex-direction: column;
     /* background: green; */
-    width: 60px;
+    width: 5vw;
+    height: 5vw;
     align-items: center;
-    padding: 5px;
+    justify-content: center;
 }
 .article__crew img, .article__launches img{
-    width: 100%;
+    width: 2vw;
     filter: invert();
     /* background: red; */
 }
 .article__crew p, .article__launches p{
-    margin-top: 0px;
     color: var(--color-3);
+    font-size: 1.2vw;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    /* background: red; */
 }
