--- a/css/style.css
+++ b/css/style.css
@@ -1,111 +1,216 @@
 @import url(variables.css);
 
-body{
+body {
+    display: flex;
     background: var(--color-1);
+}
+.allinfo__content{
+    padding: 20px;
     display: flex;
-    flex-direction: column;
-    /* justify-content: space-between; */
-    height: 100vh;
-}
-main{
-    background: yellow;
-}
-.name__value {
-    background: red;
-    height: 8vh;
-}
-.info__value {
-    background: brown;
-    display: flex;
-    justify-content: space-between;
-    height: 70vh;
-    margin-top: 2vw;
-}
-.rigth__container {
-    background: gray;
-    width: 15vw;
-}
-.center__container {
-    background: orange;
-    width: 70vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-.content__graphics {
-    background: green;
-    height: 20vh;
-}
-.content__image {
-    display: flex;
-    background: white;
-    height: 30vh;
-    width: 20vw;
-    overflow-x: scroll;
-    align-self: center;
-    border-radius: 5%;
-}
-.content__image img{
-    width: 20vw;
-    margin-right: 1vw;
-}
-.content__scroll {
-    /* background: pink; */
-    display: flex;
-    justify-content: space-between;
-    height: 20vh;
     width: 100vw;
+    height: 100vh;
+    justify-content: space-between;
 }
-.scroll__rigth{
-    background: blue;
-    width: 20vw;
-    overflow-y: scroll;
-}
-.scroll__left{
-    background: blue;
-    width: 20vw;
-    overflow-y: scroll;
-    text-align: justify;
-}
-.left__container {
-    background: gray;
-    width: 15vw;
-}
-
-footer{
-    background: var(--color-2);
-    clip-path: polygon(10% 40%, 90% 40%, 100% 100%, 0% 100%);
-    padding-left: 7vw;
-    padding-top: 3vw;
-    width: 60vw;
-    height: 8vh;
-    align-self: center;
+.column.left, .column.right {
+    display: flex;
+    flex-direction: column;
+    width: 20%;
     /* background: red; */
 }
-.footer__menu {
-    display: flex;
-    width: 53vw;
-    height: 10vw;
-    /* background: yellow; */
-    align-items: end;
+.list {
+    list-style: none;
+    padding: 0;
 }
-.article__crew, .article__launches{
+.list li {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+.list li img {
+    margin-right: 10px;
+}
+.center {
     display: flex;
     flex-direction: column;
-    /* background: green; */
-    width: 5vw;
-    height: 5vw;
+    width: 60%;
+}
+.section {
+    margin-bottom: 20px;
+}
+.title-section {
+    text-align: center;
+    margin-bottom: 20px;
+}
+.circular-bar {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 20px;
+}
+.circular-chart {
+    position: relative;
+    display: flex;
     align-items: center;
     justify-content: center;
+    width: 100px;
+    height: 100px;
 }
-.article__crew img, .article__launches img{
-    width: 2vw;
+.circular-chart svg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: rotate(-90deg);
+}
+.circular-chart circle {
+    fill: none;
+    stroke-width: 10;
+}
+.circular-chart .bg {
+    stroke: #ddd;
+}
+.circular-chart .progress {
+    stroke-dasharray: 251.2;
+    stroke-dashoffset: 251.2;
+    transition: stroke-dashoffset 1s;
+}
+.circular-chart .text {
+    position: relative;
+    font-size: 18px;
+    font-weight: bold;
+}
+.horizontal-sections {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    /* background: red; */
+    height: 400px;
+}
+.scroll-container {
+    height: 200px;
+    overflow-y: scroll;
+    margin-right: 20px;
+    align-self: flex-end;
+}
+.scroll-container table {
+    width: 100%;
+    border-collapse: collapse;
+}
+.scroll-container table, .scroll-container th, .scroll-container td {
+    border: 1px solid #ddd;
+}
+.scroll-container th, .scroll-container td {
+    padding: 8px;
+    text-align: left;
+}
+.image-container {
+    display: flex;
+    overflow-x: scroll;
+    margin-right: 20px;
+    width: 400px;
+}
+.image-container img {
+    margin-right: 10px;
+    width: 600px;
+    height: 300px;
+}
+.polygon-menu {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+}
+.polygon-menu .item {
+    width: 100px;
+    height: 50px;
+    background: #f0f0f0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 10px;
+    transition: background 0.3s;
+    margin-right: 10px;
+}
+.polygon-menu .item:hover {
+    background: #e0e0e0;
+}
+.polygon-menu .item img {
+    width: 30px;
+    height: 30px;
+    margin-bottom: 5px;
+}
+.trapezoid-container {
+    position: absolute;
+    bottom: 0;
+    left: 50%; 
+    transform: translateX(-50%);
+    display: flex;
+    justify-content: center;
+    width: 600px;
+    margin: 0 auto;
+    clip-path: polygon(25% 0%, 75% 0%, 100% 100%, 0% 100%);
+    padding: 20px;
+    background-color: blue;
+}
+.trapexoid-scroll{
+    display: flex;
+    overflow-x: scroll;
+    width: 370px;
+    height: 90px;
+}
+.hexagon {
+    position: relative;
+    width: 100px;
+    height: 58px;
+    margin-right: 10px;
+}
+.hexagon-inner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    padding: 10px;
+    transition: background 0.3s;
+}
+.hexagon-inner:hover {
+    background: #e0e0e0;
+}
+.hexagon-inner img {
+    width: 30px;
+    height: 30px;
+    margin-bottom: 5px;
     filter: invert();
-    /* background: red; */
 }
-.article__crew p, .article__launches p{
+.hexagon-inner span {
     color: var(--color-3);
-    font-size: 1.2vw;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    /* background: red; */
+}
+.pagination-container {
+    position: absolute;
+    bottom: 20px;
+    left: 85%;
+    transform: translateX(-50%);
+    overflow-x: auto;
+    white-space: nowrap;
+    margin-top: auto;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    width: 200px;
+}
+.pagination {
+    display: inline-block;
+    padding: 10px;
+    text-decoration: none;
+    color: #007bff;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    margin-right: 5px;
+}
+.pagination:hover {
+    background-color: #007bff;
+    color: white;
 }
