feat: :construction: Trabajando en la importacion de datos
Trayendo info del json dragons ajustando el diseño segun la info traida

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
     width: 100vw;
     height: 100vh;
     justify-content: space-between;
+    color: var(--color-3);
 }
 .column.left, .column.right {
     display: flex;
