--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,8 @@ body {
 .column.left, .column.right {
     display: flex;
     flex-direction: column;
-    width: 250px;
-    font-size: 15px;
+    width: 15vw;
+    font-size: 1vw;
     /* background: red; */
 }
 .list {
@@ -32,7 +32,7 @@ body {
 .center {
     display: flex;
     flex-direction: column;
-    width: 850px;
+    width: 70vw;
     /* background: green; */
 }
 .section {
@@ -40,7 +40,8 @@ body {
 }
 .title-section {
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 2vw;
+    font-size: 2vw;
 }
 .circular-bar {
     display: flex;
@@ -52,8 +53,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100px;
-    height: 100px;
+    width: 8vw;
+    height: 8vw;
 }
 .circular-chart svg {
     position: absolute;
@@ -77,7 +78,7 @@ body {
 }
 .circular-chart .text {
     position: relative;
-    font-size: 18px;
+    font-size: 1vw;
     font-weight: bold;
 }
 .horizontal-sections {
@@ -88,30 +89,34 @@ body {
     height: 40vh;
 }
 .scroll-container {
-    height: 200px;
+    height: 25vh;
     overflow-y: scroll;
     margin-right: 20px;
     align-self: flex-end;
-    width: 350px;
+    width: 35vw;
+    /* background: red; */
 }
 .scroll-container table {
     width: 100%;
-    font-size: 15px;
+    font-size: 1vw;
 }
 .scroll-container th{
     padding: 8px;
     text-align: left;
 }
+.scroll-container h5{
+    font-size: 1.4vw;
+}
 .image-container {
     display: flex;
     overflow-x: scroll;
-    margin-right: 20px;
-    width: 400px;
+    margin-right: 1vw;
+    width: 30vw;
 }
 .image-container img {
-    margin-right: 10px;
-    width: 400px;
-    height: 200px;
+    margin-right: 1vw;
+    width: 30vw;
+    height: 30vh;
 }
 .polygon-menu {
     display: flex;
@@ -142,55 +147,57 @@ body {
 .trapezoid-container {
     position: absolute;
     bottom: 0;
-    left: 50%; 
+    left: 50vw;
     transform: translateX(-50%);
     display: flex;
     justify-content: center;
-    width: 600px;
+    width: 40vw;
     margin: 0 auto;
     clip-path: polygon(25% 0%, 75% 0%, 100% 100%, 0% 100%);
-    padding: 20px;
-    background-color: blue;
+    padding: 0px 20px 0px 20px;
+    background-color: var(--color-2);
 }
 .trapexoid-scroll{
     display: flex;
     overflow-x: scroll;
-    width: 370px;
-    height: 60px;
+    width: 26vw;
+    height: 11vh;
+    /* background: red; */
 }
 .hexagon {
     position: relative;
-    width: 100px;
-    height: 58px;
+    width: 100vw;
+    height: 7vh;
     margin-right: 10px;
 }
 .hexagon-inner {
+    /* background: yellow; */
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 100%;
+    height: 7vh;
     text-align: center;
-    padding: 10px;
+    padding: 10px 10px 0px 10px;
     transition: background 0.3s;
 }
 .hexagon-inner:hover {
     background: #e0e0e0;
 }
 .hexagon-inner img {
-    width: 30px;
-    height: 30px;
+    width: 1.8vw;
     margin-bottom: 5px;
     filter: invert();
 }
 .hexagon-inner span {
     color: var(--color-3);
+    font-size: 1vw;
 }
 .pagination-container {
     position: absolute;
     bottom: 20px;
-    left: 85%;
+    left: 85vw;
     transform: translateX(-50%);
     overflow-x: auto;
     white-space: nowrap;
