feat: :construction: Trabjando en la plantilla Rocket
Seesta creando las funciones para traer la info de rockets

--- a/css/style.css
+++ b/css/style.css
@@ -202,10 +202,10 @@ body {
     overflow-x: auto;
     white-space: nowrap;
     margin-top: auto;
-    height: 40px;
+    height: 10vh;
     display: flex;
     align-items: center;
-    width: 200px;
+    width: 15vw;
 }
 .pagination {
     display: inline-block;
