feat: :sparkles: Creacion de vista Launches
Se completa la vist launches

--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,9 @@ body {
     justify-content: space-around;
     margin-bottom: 20px;
 }
+.circular-bar img{
+    width: 8vw;
+}
 .circular-chart {
     position: relative;
     display: flex;
