--- a/css/style2.css
+++ b/css/style2.css
@@ -1,10 +1,13 @@
 @import url(variables.css);
 
 body{
-    background: var(--color-1);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    background-image: url('../storage/img/video.mp4');
+    background-size: cover;
+    background-repeat: repeat; 
+    background-position: center; 
 }
 main{
 
@@ -45,14 +48,30 @@ main{
     font-size: 1.3vw;
     margin-right: 4vw;
 }
+.content__info_core{
+    overflow-y: scroll;
+    width: 40vw;
+    height: 20vh;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1.2vw;
+    margin-right: 4vw;
+}
+.content__info_core h1{
+    font-size: 2vw;
+}
+
 .image__info img{
     width: 12vw;
     box-shadow: 0px 0px 30px rgb(255, 255, 255);
 }
 .description__info{
-    width: 20vw;
+    width: 40vw;
     height: 20vh;
     overflow-y: scroll;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.description__info h5{
+    font-size: 2vw;
 }
 .description__info p{
     font-size: 1vw;
