style: :lipstick: Estilo de vista Cores ajustado
Se ajusta el estilo de la vista cores, admeas se esta probando nuevo gif de fondo

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@
 body {
     display: flex;
     background: var(--color-1);
+    background-image: url('../storage/img/giphyackground.webp');
+    background-size: cover;
+    background-repeat: repeat; 
+    background-position: center; 
 }
 .allinfo__content{
     display: flex;
