chore: :art: Cambio de imagenes del menu
Se cambian la simagens relacionadas al menu

--- a/css/style2.css
+++ b/css/style2.css
@@ -123,7 +123,7 @@ main{
     transition: background 0.3s;
 }
 .hexagon-inner:hover {
-    background: #e0e0e0;
+    background: #011468;
 }
 
 .hexagon-inner img {
